--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,18 @@
 version: '3'
 services:
   app:
+#    image: adubois360/demo-node-mongo
+    build: .
     container_name: docker-node-mongo
     restart: always
-    build: .
     ports:
       - '80:3000'
     links:
       - mongo
+#    depends_on:
+#      - mongo
   mongo:
     container_name: mongo
     image: mongo
-    ports:
-      - '27017:27017'
+#    ports:
+#      - '27017:27017'
