--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,6 @@ services:
   mongo:
     container_name: mongo
     image: mongo
-#    ports:
-#      - '27017:27017'
+  replica:
+    container_name: replica
+    image: mongo
